# CSpaceEngine-Project

./: .gitignore  CMakeLists.txt  CSE-Config.cmake  README.md
CMake/: AddSubdirectories.cmake  ECMOptionalAddSubdirectory.cmake  FmtBackupSolution.cmake  Installation.cmake
CMakeRes/: Algorithms.CMake  ModuleManager.CMake
Extensions/Astronomy/: CMakeLists.txt
Extensions/Astronomy/Headers/CSE/: Astronomy.h
Extensions/Astronomy/Headers/CSE/Astronomy/: Location.h  StellarClass.h
Extensions/Astronomy/Sources/: Location.cc  StellarClass.cc
Extensions/Hyperbolic/: CMakeLists.txt
Extensions/Hyperbolic/Headers/CSE/Extensions/: Hyperbolic.h
Extensions/Hyperbolic/Sources/: Hyperbolic.cc
Extensions/MathExtras/: CMakeLists.txt
Extensions/MathExtras/Headers/CSE/Base/: MathFuncs_Extras.h
Extensions/MathExtras_Sexagesimal/: CMakeLists.txt
Extensions/MathExtras_Sexagesimal/Headers/CSE/: Sexagesimal.h
Extensions/MathExtras_Sexagesimal/Sources/: Sexagesimal.cc
Extensions/Physics/: CMakeLists.txt
Extensions/Physics/Headers/CSE/: Physics.h
Extensions/Physics/Headers/CSE/Physics/: HydroDynamic.h  Illuminants.h  Materials.h  Object.h  Orbit.h  Rotation.h  Spectroscopy.h  Thermodynamics.h
Extensions/Physics/Headers/CSE/Physics/ObjectConstructors/: PlanetConstructor.h
Extensions/Physics/Sources/: EOS.cc  HydroEquilib.cc  IAU.cc  Orbit.cc  OrbitGeneration.cc  OrbitTLE.cc  OrbitTracker.cc
Extensions/Physics/Sources/Illuminants/: Magnitudes.cc  StelClassParsers.cc  StelClassRegexes.cc  StellarClassification.cc
Extensions/Physics/Sources/Materials/: EOSs.cc  Ferrum.cc
Extensions/Physics/Sources/ObjectConstructors/: PlanetConstructor.cc
Extensions/Physics/Sources/Optics/: Magnitudes.cc
Extensions/Physics/Sources/Orbit/: HKE-SDG.tbl  IKE.cc  Lambert.cc  OEM.cc  Orbit.cc  RocheLobe.cc  SatelliteTracker.cc  TLE.cc
Extensions/Physics/Sources/Rotation/: Rotation.cc  RotationTracker.cc
Extensions/PlanSystem/: CMakeLists.txt
Extensions/PlanSystem/Headers/CSE/: PlanSystem.h
Extensions/PlanSystem/Sources/: PlanSystem.cc
Extensions/Universe/: CMakeLists.txt
Headers/CSE/: CSE.h.cmake
Modules/Base/: CMakeLists.txt
Modules/Base/Headers/CSE/: Base.h
Modules/Base/Headers/CSE/Base/: AdvMath.h  Algorithms.h  CSEBase.h  ConstLists.h  DateTime.h  GLTypes.h  LinAlg.h  MathFuncs.h  MathFuncs.h~RF5c63bfa.TMP  Random.h
Modules/Base/Headers/CSE/Base/LinAlg/: DynamicMatrix.inc  LinalgBasic.hh
Modules/Base/Headers/CSE/Base/StelCXXRes/: StelCXX-IEEE754-Dbl64.h  StelCXX-UniString.h
Modules/Base/Headers/CSE/Base/StelCXXRes/GLM/: StelCXX-GLM-GLVectorT.hh  StelCXX-GLM-GenericMatrix.hh  StelCXX-GLM.hh
Modules/Base/Headers/CSE/Base/System/: SysDetector.h
Modules/Base/Sources/: Algorithms.cc  CSEBase.cc  ConstEquations.cc  DateTime.cc  Random.cc
Modules/Base/Sources/AdvMath/: Coordinates.cc  Derivatives.cc  Differentiations.cc  FuncInvertors.cc.bak  Integrals.cc  Integrations.cc  Integrations_GaussKronrod.tbl  Integrations_NewtonCotes.tbl  InverseFunctions.cc  Iterators.cc  Limits.cc.bak  Minima.cc  ODETables.cc  ODEs.cc  ODEs_RungeKutta.tbl  SpecialFuncs.cc
Modules/Base/Sources/IEEE754/: ibm_uroot.cc  ibm_usncs.cc  ibm_utan.cc  ieee754_atan.cc  ieee754_cbrt.cc  ieee754_ln.cc  ieee754_pow.cc  opencv_sincos.cc  stelcxx_extrig.cc  stelcxx_yroot.cc
Modules/Base/Sources/MathFuncs/: Hyperbolic.cc  SolvePoly.cc  Trigonometry.cc  YRoot.cc  ibm_uasncs.cc  ibm_uroot.cc  ibm_usncs.cc  ibm_utan.cc  ieee754_acos.cc  ieee754_asin.cc  ieee754_atan.cc  ieee754_atan_table.py  ieee754_cbrt.cc  ieee754_exp.cc  ieee754_ln.cc  ieee754_log.cc  ieee754_pow.cc  ieee754_tanctg.cc  opencv_sincos.cc  opencv_sincos_table_coeffs.py  stelcxx_extrig.cc
Modules/Base/Sources/StelCXXRes/unistring/: StelCXX-UniString.cc
Modules/Base/Sources/StelCXXRes/unistring/Codec/: 1200.cc  65001.cc  936.cc  CP936.tbl  GB2312.1980-0.tbl  GBK3.tbl  GBK4-5.tbl  StelCXX-Codec-65001.cc
Modules/CSEBase/: CMakeLists.txt  CSEBase-config.cmake.conf
Modules/CSEBase/Headers/CSE/: CSEBase.h
Modules/CSEBase/Headers/CSE/CSEBase/: AdvMath.h  Algorithms.h  CSEBase.h  ConstLists.h  DateTime.h  GLTypes.h  Geometry.h  MathFuncs.h  Random.h
Modules/CSEBase/Headers/CSE/CSEBase/gltypes/: GFunctions.h  GLBase.h  GMatrix.h  GVector2D.h  GVector3D.h  GVector4D.h  GVectorND.h
Modules/CSEBase/Headers/CSE/CSEBase/sysdeps/: IEEE754.h
Modules/CSEBase/Sources/: Algorithms.cc  CSEBase.cc  ConstEquations.cc  DateTime.cc  Geometry.cc  Random.cc
Modules/CSEBase/Sources/AdvMath/: Coordinates.cc  Derivatives.cc  FuncInvertors.cc  Integrals.cc  ODETables.cc  ODEs.cc
Modules/CSEBase/Sources/Complex/: C_ATAN.cc  C_EXP.cc  C_LOG.cc  C_POW.cc  C_SINCOS.cc
Modules/CSEBase/Sources/IEEE754/: CV_SNCS.cc  EX_TRIGONOMETRY.cc  IBM_UASNCS.cc  IBM_UROOT.cc  IBM_USNCS.cc  IBM_UTAN.cc  IEEE754_ATAN.cc  IEEE754_CBRT.cc  IEEE754_EXP.cc  IEEE754_LN.cc  IEEE754_LOG.cc  IEEE754_POW.cc  YROOT.cc
Modules/Object/: CMakeLists.txt  Object-config.cmake.conf
Modules/Object/Headers/CSE/: Object.h
Modules/Object/Sources/: Object.cc
Modules/Parser/: CMakeLists.txt
Modules/Parser/Headers/CSE/: Parser.h
Modules/Parser/Headers/CSE/Parser/: ISCStream.h  OSCStream.h  SCSBase.h
Modules/Parser/Headers/CSE/Parser/StelCXXRes/: LRParser.h
Modules/Parser/Sources/: ISCLexicality.cc  ISCPreProc.cc  ISCStream3.cc  ISCSyntax.cc  OSCStream21.cc
Modules/Parser/Sources/Grammar/: GSC_LALR1.txt  GSC_LR1.tbl  GSC_LR1.txt  GrammarSC.y
Modules/SCStream/: CMakeLists.txt  SCStream-config.cmake.conf
Modules/SCStream/Headers/CSE/: SCStream.h
Modules/SCStream/Headers/CSE/SCStream/: CodeCvt.h  ISCStream.h  LRParser.h  OSCStream.h  SCSBase.h
Modules/SCStream/Headers/CSE/SCStream/StelCXXRes/: LRParser.h
Modules/SCStream/Sources/: ISCLR1States.tbl  ISCLexicality.cc  ISCParser.cc  ISCPreProc.cc  ISCStream3.cc  ISCSyntax.cc  OSCStream21.cc  SC Grammar IELR(1) State Machine by GNU Bison.txt  SC Grammar LR(1) State Machine by GNU Bison.txt
Modules/SCStream/Sources/Codec/: 65001.cc
Modules/SCStream/Sources/Grammar/: ISCGrammar.y  LR1.tbl
